feat: 优化书签导入逻辑，支持存档参数
